--- a/index.html
+++ b/index.html
@@ -6,7 +6,13 @@
     <title>Site da aula</title>
 </head>
 <body>
-    
+    <h1>Titulo do site</h1></head>
+         <article>Artigo001
+            <p>Texto do artigo</p>
+            <article>
+                <article>Artigo002
+                    <p>Texto do artigo</p>
+                    <article>
     
 </body>
 </html>
