comecei a escrevar conteúdo

--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <title>Site da aula</title>
 </head>
 <body>
-    <h1>Titulo do site</h1></head>
+    <h1>Curso Grátis</h1></head>
          <article>Artigo001
-            <p>Texto do artigo</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt fugiat nihil debitis? Mollitia vitae doloribus exercitationem ipsum distinctio, veritatis, eius officiis voluptas dolore deleniti odio rerum nobis voluptatibus, in nam!</p>
             <article>
                 <article>Artigo002
-                    <p>Texto do artigo</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit dolore dolor, amet fugit architecto adipisci sunt quam obcaecati, aliquid commodi omnis? Assumenda dolor et sed nemo similique asperiores ratione voluptates.</p>
                     <article>
     
 </body>
