--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Site da aula</title>
+    <link rel="stylesheet" href="estilos/style.css">
 </head>
 <body>
     <h1>Titulo do site</h1></head>
