--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="estilos/style.css">
 </head>
 <body>
-    <h1>Titulo do site</h1></head>
+    <main>
+        <h1>Titulo do site</h1></head>
          <article>Artigo001
             <p>Texto do artigo</p>
             <article>
@@ -15,5 +16,6 @@
                     <p>Texto do artigo</p>
                     <article>
     
+    </main>
 </body>
 </html>
