--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <main>
-        <h1>Titulo do site</h1></head>
+        <h1>Titulo do site</h1>
+        <img src="imagens/curso-em-video-cor.png" alt="Curos em video colorido">    
+    </head>
          <article>Artigo001
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt fugiat nihil debitis? Mollitia vitae doloribus exercitationem ipsum distinctio, veritatis, eius officiis voluptas dolore deleniti odio rerum nobis voluptatibus, in nam!</p>
             <article>
