Mudança nas imagens

--- a/index.html
+++ b/index.html
@@ -11,9 +11,14 @@
         <h1>Titulo do site</h1>
         <img src="imagens/curso-em-video-cor.png" alt="Curos em video colorido">    
     </head>
-         <article>Artigo001
+    <h1>Curos de vídeo HTML</h1>
+        <h2><img class="lado" src="imagens/curso-html-css.png" alt="Curos de vídeo HTML"></h2>    
+    <article>Artigo001
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt fugiat nihil debitis? Mollitia vitae doloribus exercitationem ipsum distinctio, veritatis, eius officiis voluptas dolore deleniti odio rerum nobis voluptatibus, in nam!</p>
             <article>
+                <h1>Curos curso-javascript</h1>
+                <h2><img class="lado" src="imagens/curso-javascript.png" alt="Curso curso-javascript"></h2>
+                
                 <article>Artigo002
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit dolore dolor, amet fugit architecto adipisci sunt quam obcaecati, aliquid commodi omnis? Assumenda dolor et sed nemo similique asperiores ratione voluptates.</p>
                     <article>
